<resources>
    <string name="app_name">Safra Meu Negócio</string>
    <string name="account_hint">ACCOUNT</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sucess_login">Login Succeeded!</string>
    <string name="login">Log In</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="fullName">Name</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Login Here</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="registered_unsuccessfully">Registered Unsuccessfully</string>
    <string name="login_error_message">Login error, please Login Again</string>
    <string name="reset_password">Reset Password?</string>
    <string name="reset_password_link_message">Enter your email to received reset link."</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="press_again_to_close_app">Press again to close the app.</string>
    <string name="phone">Phone</string>
    <string name="cc">CC: %s</string>
    <string name="balance">R$: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Header">Safra Payments</string>
    <string name="next">próximo</string>
    <string name="signup">cadastrar</string>
    <string name="back">voltar</string>
    <string name="fullName_hint">nome completo</string>
    <string name="cpf_hint">CPF</string>
    <string name="phone_hint">celular</string>
    <string name="password_confirm_hint">confirmar senha</string>
    <string name="barcode_input">codigo de barras</string>
    <string name="pay_text">pagar</string>
    <string name="transfer_text">transferencia</string>
    <string name="bank">banco</string>
    <string name="logo">logo</string>
    <string name="agency_hint">agencia</string>
    <string name="account_number_hint">conta</string>
    <string name="digit_hint">digito</string>
    <string name="account_number_text">"conta nº %"</string>
    <string name="balanceMessage">R$%</string>
    <string name="store">minha loja</string>
    <string name="conta_hint">CONTA</string>
    <string name="product_quantity">x%s</string>
    <string name="amount">TOTAL R$ %s</string>
    <string name="price">R$ %s</string>
    <string name="exit_hint">sair</string>
    <string name="profile_hint">perfil</string>
    <string name="name_placeholder_account">bem vind%1, %2!</string>
    <string name="balance_hint">seu saldo é</string>
    <string name="statement_text">EXTRATO</string>
    <string name="transfer_text_cta">TRANSFERIR</string>
    <string name="confirm">transferir</string>
    <string name="change_order_cta">ALTERAR PEDIDO</string>
    <string name="share_link_popup">COMPARTILHAR\nLINK</string>
    <string name="new_order_popup">NOVO PEDIDO</string>
    <string name="login_unsuccessfully">usuario ou senha incorretos</string>
    <string name="bank_select">selecionar banco</string>
</resources>
