<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUA VENDA\nESTÁ CONCLUÍDA"
            android:textSize="38sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="COMPARTILHE O LINK ABAIXO\nPARA REALIZAR A COBRANÇA"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linkOrder"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeOrder"
            android:text="@string/change_order_cta"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/deu_bom_coiso"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShareLinkPopup"
                android:text="@string/share_link_popup"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNewOrderPopup"
                android:text="@string/new_order_popup"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>