<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/LoginLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/appNameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSafra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:text="Safra"
            android:fontFamily="@font/arialmt"
            android:textColor="#c0ae6c"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/lblMyBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="Meu Negócio"
            android:fontFamily="@font/corbel_bold"
            android:textColor="@color/off_white"
            android:textSize="40sp" />

    </LinearLayout>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="320dp"
            android:layout_height="25dp"
            android:alpha="0.9"
            android:background="@drawable/et_style"
            android:hint="@string/conta_hint"
            android:inputType="number"
            android:textColor="#000"
            android:textColorHint="@color/black_overlay"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="320dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:alpha="0.9"
            android:background="@drawable/et_style"
            android:hint="@string/password_hint"
            android:textSize="14sp"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="@color/black_overlay"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/forgot_password"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:textSize="8sp"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bt_style"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#fff" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_below="@+id/LoginLinearLayout"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ic_register"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abrir_conta" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/off_white"
            android:lines="2"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>